--- a/rancheros_cloud-config.yml
+++ b/rancheros_cloud-config.yml
@@ -16,16 +16,16 @@ rancher:
     - /dev/sda
   # system_docker:
   #   storage_driver: overlay2
-  modules: [ath9k, usbip-host]
+  # modules: [ath9k, usbip-host]
   docker:
     tls: true
     engine: docker-1.12.6
     storage_driver: overlay2
   console: debian
-  network:
-    interfaces:
-      eth0:
-        dhcp: true
+  # network:
+  #   interfaces:
+  #     eth0:
+  #       dhcp: true
 
   # services:
 
@@ -93,7 +93,7 @@ write_files:
         [[ ! $(docker network ls | grep -qs vpnbridge) ]] && docker network create --driver macvlan --subnet 10.0.0.0/24 --gateway 10.0.0.1 -o parent=eth0 vpnbridge
       }
 
-       _enable_kernel_headers
+      _enable_kernel_headers
       _pull_images
       _mk_networks
 
