--- a/rancheros_cloud-config.yml
+++ b/rancheros_cloud-config.yml
@@ -7,18 +7,18 @@ ssh_authorized_keys:
 #   - ['srv:/exports/config_store', '/opt/config_store', 'nfs', '']
 
 rancher:
-  state:
-    required: true
-    wait: true
-    fstype: auto
-    dev: LABEL=RANCHER_STATE
-    autoformat:
-    - /dev/sda
+  # state:
+  #   required: true
+  #   wait: true
+  #   fstype: auto
+  #   dev: LABEL=RANCHER_STATE
+  #   autoformat:
+  #   - /dev/sda
   # system_docker:
   #   storage_driver: overlay2
   # modules: [ath9k, usbip-host]
   docker:
-    tls: true
+    tls: false
     engine: docker-1.12.6
     storage_driver: overlay2
   console: debian
