--- a/rancheros_cloud-config.yml
+++ b/rancheros_cloud-config.yml
@@ -15,8 +15,8 @@ rancher:
     # - /dev/sdd
     # - /dev/sde
     # - /dev/sdf
-  system_docker:
-    storage_driver: overlay2
+  # system_docker:
+  #   storage_driver: overlay2
   # modules: [kvm, kvm_intel]
   docker:
     # tls: false
@@ -28,15 +28,15 @@ rancher:
       nameservers:
       - 173.199.96.96
       - 173.199.96.97
-    # interfaces:
-    #   eth0:
-    #     dhcp: false
-    #   eth1:
-    #     dhcp: false
-    #   eth2:
-    #     dhcp: true
-    #   eth3:
-    #     dhcp: true
+    interfaces:
+      eth0:
+        dhcp: false
+      eth1:
+        dhcp: false
+      eth2:
+        dhcp: true
+      eth3:
+        dhcp: true
 
   # services:
 
