--- a/rancheros_cloud-config.yml
+++ b/rancheros_cloud-config.yml
@@ -57,32 +57,24 @@ write_files:
       #!/usr/bin/env bash
       # This runs before docker
       _chk_upgrade() {
-        if apt update | grep -q 'can be upgraded'; then
-          apt -y -qq upgrade
-        fi
+        [[ $(apt update | grep 'can be upgraded') ]] && apt -y full-upgrade
       }
 
-      _mount_nfs() {
-        if ! dpkg -l | grep -q nfs-common; then
-          apt -y -qq install nfs-common
-        fi
-
-        mkdir -p /opt/config_store
-        mkdir -p /var/etcd/backups
-
-        rpcbind
-        # mount magrathea:/exports/config_store /opt/config_store
-        # mount --rbind /opt/config_store/rancher/k8etcd.bkp /var/etcd/backups
+      _install_user_script() {
+        curl https://raw.githubusercontent.com/voobscout/viptela/master/scripts/user_start.sh > /opt/rancher/bin/user_start.sh
+        chmod 0755 /opt/rancher/bin/user_start.sh
       }
+
       _chk_upgrade
-      _mount_nfs
+      _install_user_script
+      exec /opt/rancher/bin/user_start.sh
 
   - path: /etc/rc.local
     permissions: "0755"
     owner: root
     content: |
       #!/usr/bin/env bash
-      # This runs after docker
+      # This runs after system-docker
       wait-for-docker
 
        _pull_images() {
