--- a/rancheros_cloud-config.yml
+++ b/rancheros_cloud-config.yml
@@ -11,7 +11,7 @@ rancher:
     dev: LABEL=RANCHER_STATE
     autoformat:
     - /dev/sda
-  modules: [kvm, kvm_intel, vhost-net]
+  modules: [kvm, kvm_intel, vhost-net, tun, autofs4]
   docker:
     # tls: false
     engine: docker-1.13.1
@@ -102,3 +102,4 @@ write_files:
     content: |
       user_allow_other
 ...
+# docker run --name tt --rm -ti  -v /mnt/images/ubuntu_1604.qcow2:/var/lib/libvirt/images/image.qcow2 -v /sys/fs/cgroup:/sys/fs/cgroup -v /tmp/domrun:/etc/default/domrun --privileged --tmpfs /tmp voobscout/base-arch:libvirt
