--- a/dockerfiles/libvirt/overlay/etc/systemd/system/teleport.service.d/override.conf
+++ b/dockerfiles/libvirt/overlay/etc/systemd/system/teleport.service.d/override.conf
@@ -2,5 +2,5 @@
 EnvironmentFile=-/etc/default/teleport
 
 ExecStart=
-ExecStart=/usr/bin/teleport start --roles=node --nodename=db --config $CONFIG
+ExecStart=/usr/bin/teleport start --roles=node --token=internalxyz --auth-server=teleport:3025
 SyslogIdentifier=teleport-ssh-client
