--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,8 @@ services:
     domainname: njk.li
     restart: always
     volumes:
-      - /mnt/config/teleport:/var/lib/teleport
-      - ./teleport_site.yml:/etc/teleport.yml
+      # - /mnt/config/teleport:/var/lib/teleport
+      - ./resources/teleport_site.yml:/etc/teleport.yml
     environment:
       VIRTUAL_HOST: teleport.njk.li
       VIRTUAL_PROTO: https
