--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
     restart: always
     volumes:
       # - /mnt/config/teleport:/var/lib/teleport
+      - /var/lib/teleport
       - ./resources/teleport_site.yml:/etc/teleport.yml
     environment:
       VIRTUAL_HOST: teleport.njk.li
